--- a/Presidencia/Presidencia.csproj
+++ b/Presidencia/Presidencia.csproj
@@ -165,6 +165,8 @@
     <Content Include="lib\main.js" />
     <Content Include="lib\main.min.css" />
     <Content Include="lib\main.min.js" />
+    <Content Include="ReporteAudiencias.aspx" />
+    <Content Include="ReporteReservas.aspx" />
     <Content Include="ReservaAuditorio.aspx" />
     <Content Include="Scripts\CalendarioAuditorio.js" />
     <Content Include="StyleLogin\css\main.css" />
@@ -242,9 +244,25 @@
     </Compile>
     <Compile Include="Modelos\CConexion.cs" />
     <Compile Include="Modelos\MensajeAlerta.cs" />
+    <Compile Include="Modelos\RepAudiencias.cs" />
+    <Compile Include="Modelos\RepReservas.cs" />
     <Compile Include="Modelos\ReservaAudi.cs" />
     <Compile Include="Modelos\Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReporteAudiencias.aspx.cs">
+      <DependentUpon>ReporteAudiencias.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ReporteAudiencias.aspx.designer.cs">
+      <DependentUpon>ReporteAudiencias.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ReporteReservas.aspx.cs">
+      <DependentUpon>ReporteReservas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ReporteReservas.aspx.designer.cs">
+      <DependentUpon>ReporteReservas.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ReservaAuditorio.aspx.cs">
       <DependentUpon>ReservaAuditorio.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
