--- a/Presidencia/Presidencia.csproj
+++ b/Presidencia/Presidencia.csproj
@@ -43,6 +43,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AjaxControlToolkit, Version=18.1.0.0, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\AjaxControlToolkit.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -82,7 +86,18 @@
     <Content Include="css\style.css" />
     <Content Include="css\StyleLogin.css" />
     <Content Include="Ejemplo.aspx" />
-    <Content Include="images\Foto.jpg" />
+    <Content Include="images\CINTILLO-INFERIOR.png" />
+    <Content Include="images\CINTILLO-INFERIORAndroid.png" />
+    <Content Include="images\CINTILLO-INFERIORIpad.png" />
+    <Content Include="images\CINTILLO-INFERIORIphone.png" />
+    <Content Include="images\CINTILLO-SUPERIOR.png" />
+    <Content Include="images\CINTILLO-SUPERIORAndroid.png" />
+    <Content Include="images\CINTILLO-SUPERIORIpad.png" />
+    <Content Include="images\CINTILLO-SUPERIORIphone.png" />
+    <Content Include="images\FONDO.png" />
+    <Content Include="images\PoderJudicialHgo.png" />
+    <Content Include="images\SELLO-GRIS.png" />
+    <Content Include="images\title.ico" />
     <Content Include="Inicio.aspx" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\jquery.min.js" />
@@ -170,7 +185,9 @@
     <Content Include="ReporteAudiencias.aspx" />
     <Content Include="ReporteReservas.aspx" />
     <Content Include="ReservaAuditorio.aspx" />
+    <Content Include="ReservaPresidencia.aspx" />
     <Content Include="Scripts\CalendarioAuditorio.js" />
+    <Content Include="Scripts\CalendarioPresidencia.js" />
     <Content Include="StyleLogin\css\main.css" />
     <Content Include="StyleLogin\css\util.css" />
     <Content Include="StyleLogin\fonts\font-awesome-4.7.0\css\font-awesome.css" />
@@ -213,6 +230,7 @@
     <Content Include="StyleLogin\vendor\select2\select2.js" />
     <Content Include="StyleLogin\vendor\select2\select2.min.css" />
     <Content Include="StyleLogin\vendor\select2\select2.min.js" />
+    <Content Include="title.ico" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -251,8 +269,11 @@
     <Compile Include="MasterPrincipal.Master.designer.cs">
       <DependentUpon>MasterPrincipal.Master</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\Audiencias.cs" />
     <Compile Include="Modelos\CConexion.cs" />
     <Compile Include="Modelos\MensajeAlerta.cs" />
+    <Compile Include="Modelos\NArchivosFTP.cs" />
+    <Compile Include="Modelos\Personas.cs" />
     <Compile Include="Modelos\RepAudiencias.cs" />
     <Compile Include="Modelos\RepReservas.cs" />
     <Compile Include="Modelos\ReservaAudi.cs" />
@@ -278,6 +299,13 @@
     </Compile>
     <Compile Include="ReservaAuditorio.aspx.designer.cs">
       <DependentUpon>ReservaAuditorio.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ReservaPresidencia.aspx.cs">
+      <DependentUpon>ReservaPresidencia.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ReservaPresidencia.aspx.designer.cs">
+      <DependentUpon>ReservaPresidencia.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -481,6 +509,9 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>title.ico</ApplicationIcon>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
